tests/spec/fail/func_reassign_signature_mismatch.aja
f = fuc(x: int) -> int: x + 1
f = fuc(x: str) -> str: x
